--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node build/index.js",
-    "dev": "nodemon src/index.ts"
+    "index": "nodemon src/index.ts",
+    "dev": "nodemon src/app.ts",
+    "prepare": "npm run build"
   },
   "author": "",
   "license": "ISC",
